--- a/app/src/main/res/layout/activity_vermusica.xml
+++ b/app/src/main/res/layout/activity_vermusica.xml
@@ -110,6 +110,22 @@
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
+            <ImageButton
+                android:id="@+id/btfavoritar"
+                android:layout_width="56dp"
+                android:layout_height="43dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="335dp"
+                android:layout_marginRight="335dp"
+                app:srcCompat="@drawable/estrela" />
+
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
