--- a/app/src/main/res/layout/activity_vermusica.xml
+++ b/app/src/main/res/layout/activity_vermusica.xml
@@ -124,7 +124,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="335dp"
                 android:layout_marginRight="335dp"
-                app:srcCompat="@drawable/estrela" />
+                app:srcCompat="@drawable/estrelabranca" />
 
         </RelativeLayout>
     </ScrollView>
